SERVER-47742 recordPreImage validation should not depend on early FCV loading